--- a/pages/about.html
+++ b/pages/about.html
@@ -7,6 +7,7 @@
     <title>About</title>
 </head>
 <body>
+    <h1 class="pageHeader">About Me</h1>
     <div class="aboutPage">
         <div class="myImage"><img src="../images/portfolioImage.png" alt="Photo of Cameron Crosby">
         </div>
