--- a/pages/projects.html
+++ b/pages/projects.html
@@ -7,6 +7,7 @@
     <title>Projects</title>
 </head>
 <body>
+    <h1 class="pageHeader">Projects</h1>
     <div class="projectsPage">
         <div class="quickLook"><img src="../images/travelFlyImage.JPG" alt="Screencapture of travel-fly website"></div>
         <div class="textAndLink">
