--- a/index.html
+++ b/index.html
@@ -17,17 +17,21 @@
             <li><a href="#home">home</a></li>
             <li><a href="#about">about</a></li>
             <li><a href="#projects">projects</a></li>
+            <li><a href="#contact">contact</a></li>
         </ul>
         <ul class="mobileNav" id="hamburgerMenu">
             <i class="fa-solid fa-bars"></i>
             <li><a href="#home">home</a></li>
             <li><a href="#about">about</a></li>
             <li><a href="#projects">projects</a></li>
+            <li><a href="#contact">contact</a></li>
         </ul>
     </nav>
 
     <div class="container" id="container">
     </div>
+
+    <footer>&copy; Copyright 2027</footer>
 
     <script src="lib/jquery-3.6.4.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
