Update Pages for hw3

--- a/hw3/index.html
+++ b/hw3/index.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Cameron Crosby HW2</title>
+    <title>Cameron Crosby HW3</title>
 </head>
 <body>
     <nav>
-        <h2 class="logo">Homework 2</h2>
+        <h2 class="logo">Homework 3</h2>
         <ul class="navLinks">
             <li><a href="#home">home</a></li>
             <li><a href="#about">about</a></li>
             <li><a href="#projects">projects</a></li>
             <li><a href="#contact">contact</a></li>
+            <li><a href="#outreach">outreach</a></li>
         </ul>
     </nav>
     <div id="page"></div>
