--- a/hw3/pages/about.html
+++ b/hw3/pages/about.html
@@ -1,4 +1,5 @@
 <div class="aboutPage">
+    <div class="paras"><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga facere provident a. Sapiente animi perspiciatis, consequuntur suscipit, ut fugiat veritatis laborum accusamus eos quis perferendis laudantium voluptatem necessitatibus placeat et!</p>
+    <p>Deserunt earum facilis eos unde molestiae tenetur expedita suscipit repellat neque maiores explicabo consectetur reprehenderit voluptatum laboriosam obcaecati quidem porro ipsa modi ducimus, qui esse voluptatem magnam voluptate! Ipsam, maiores.</p></div>
     <img src="images/indy1.jpeg" alt="Indianapolis Droneflyover">
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum, modi deserunt? Dolore sit ad omnis minima ullam blanditiis ut unde, aut voluptatibus ipsa placeat nostrum, quia quidem dignissimos rerum aliquam.</p>
 </div>
