--- a/hw3/pages/home.html
+++ b/hw3/pages/home.html
@@ -1,3 +1,6 @@
 <div class="homePage">
-    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa eius quia animi quae aut porro eos sed atque? Doloribus iusto voluptatibus aut architecto perferendis quo sequi cum. Sed, sit ratione.</h3>
+    <div class="hero">
+        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ullam nobis eum placeat ipsum officia fuga, eligendi asperiores, sunt, error accusamus velit vel aspernatur? Dolore itaque ipsa error aspernatur reiciendis cupiditate?</p>
+    </div>
 </div>
