--- a/hw6/index.html
+++ b/hw6/index.html
@@ -1,17 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/styles.css" />
     <title>The Jungle Cook</title>
-</head>
-<body>
-    <div id="navHolder"></div>
-    <div id="app"></div>
+  </head>
+  <body>
+    <div id="app">
+      <div id="navHolder">
+        <div class="logo">
+          <a href="#home"
+            ><img src="images/logo.svg" alt="Jungle Cook Logo"
+          /></a>
+        </div>
+        <nav>
+          <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#browse">Browse</a></li>
+            <li><a href="#create">Create Recipe</a></li>
+            <li id="yourRecipes"><a href="#recipes">Your Recipes</a></li>
+            <li id="login" class="login"><a href="#login">Login</a></li>
+          </ul>
+        </nav>
+        <div id="hamburger" class="hamburger">
+          <div class="bar1"></div>
+          <div class="bar2"></div>
+          <div class="bar3"></div>
+
+          <ul class="mobileMenu">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#browse">Browse</a></li>
+            <li><a href="#create">Create Recipe</a></li>
+            <li id="yourRecipes"><a href="#recipes">Your Recipes</a></li>
+            <li id="login" class="login"><a href="#login">Login</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
 
     <script src="lib/jquery-3.7.1.min.js"></script>
     <script type="module" src="services/services.js"></script>
     <script type="module" src="app/app.js"></script>
-</body>
+  </body>
 </html>
