Needs fonts and fixed footer

--- a/hw6/index.html
+++ b/hw6/index.html
@@ -35,6 +35,36 @@
       </div>
     </div>
     <div id="app"></div>
+    <div class="footer">
+      <div class="mobileFooter">
+        <div class="copy">Copyright © 2019 The Jungle Cook</div>
+        <div class="socials">
+          <a href="#"><img src="images/facebook.svg" alt="Facebook logo"></a>
+          <a href="#"><img src="images/instagram.svg" alt="instagram logo"></a>
+        </div>
+      </div>
+      <div id="mobileLinks" class="mobileLinks links">
+        <a href="#login">Login</a>
+        <a href="#">Recipes by Category</a>
+        <a href="#">Privacy and Copyright</a>
+      </div>
+      <div id="smallLinks" class="mobileLinks links">
+        <a href="#create">Create Recipe</a>
+        <a href="#recipes">Your Recipes</a>
+      </div>
+      <div class="copy">Copyright © 2019 The Jungle Cook</div>
+      <div class="desktopLinks links">
+        <a href="#login">Login</a>
+        <a href="#">Recipes by Category</a>
+        <a href="#">Privacy and Copyright</a>
+        <a href="#create">Create Recipe</a>
+        <a href="#recipes">Your Recipes</a>
+      </div>
+      <div class="socials">
+        <a href="#"><img src="images/facebook.svg" alt="Facebook logo"></a>
+        <a href="#"><img src="images/instagram.svg" alt="instagram logo"></a>
+      </div>
+    </div>
 
     <script src="lib/jquery-3.7.1.min.js"></script>
     <script type="module" src="services/services.js"></script>
